# Sethub

./: .dockerignore  .env-example  .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/app/: const.py  main.py
backend/app/core/: README.md  __init__.py  config.py  init_env.py
backend/app/data/: posts.py
backend/app/database/: base.py  engine.py  initial_database.py  session.py  url.py
backend/app/debug/: prints.py
backend/app/fake/: auth.py  posts.py
backend/app/models/: auth.py  database.py  posts.py  users.py
backend/app/routers/: auth.py  main.py  posts.py  users.py
backend/app/routers (need_rewrite)/: main.py  posts.py  users.py
backend/app/routes/: main.py
backend/app/schemas/: auth.py  posts.py  user_group.py  users.py
backend/app/services/: auth.py  base.py  posts.py
backend/app/utils/: README.md  exc.py  posts.py  users.py
backend/app/utils  (need_rewrite)/: posts.py
backend/migrations/: env.py
backend/static/scripts/: main.js
backend/templates/: search.html
backend/templates/includes/footer/: footer.html
backend/templates/includes/header/: header.html
backend/tests/: test_db.py
docs/: HELP.md  IDEA.md  STUDY.md
frontend/: Dockerfile  index.html
frontend/src/: App.css  App.tsx  main.tsx
frontend/static/scripts/: main.js
frontend/templates/: about.html  auth.html  base.html  create_post.html  index.html  search.html
(+4 files in other folders)
