[tool.poetry]
name = "sethub"
version = "0.1.0"
description = ""
authors = ["MikhailTo <toshkin.mikhail@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/MikhailTo/Sethub"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "0.112.0"}
databases = "^0.9.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
